--- a/README
+++ b/README
@@ -24,3 +24,5 @@ of tabs.  Lines without labels are menu separators.
 
 See the script ./xmenu.sh for an example of how xmenu can be used to
 draw a simple menu with submenus and separators.
+
+Read the manual for more information on running xmenu.
