xmenu now supports x resources

--- a/xmenu.1
+++ b/xmenu.1
@@ -37,6 +37,44 @@ separating the item above from the item below.
 The command is the string that will be output after selecting the item.
 .IP
 The newline terminates the item specification.
+.SH RESOURCES
+.B
+xmenu
+understands the following X resources.
+.TP
+.B xmenu.font
+The font in which the labels should be drawn.
+.TP
+.B xmenu.background
+The background color of non-selected itens in the menu.
+.TP
+.B xmenu.foreground
+The color of the label text of non-selected itens in the menu.
+.TP
+.B xmenu.selbackground
+The background color of selected itens in the menu.
+.TP
+.B xmenu.selforeground
+The color of the label text of selected itens in the menu.
+.TP
+.B xmenu.border
+The color of the border around the menu.
+.TP
+.B xmenu.separator
+The color of the separator between itens in the menu.
+.TP
+.B xmenu.width
+The minimum width, in pixels, of the items in the menu.
+.TP
+.B xmenu.itemborder
+The size in pixels of the border around the label text in items in the menu.
+.TP
+.B xmenu.menuborder
+The size in pixels of the border around the menu.
+.TP
+.B xmenu.separatorsize
+The size in pixels of the item separator.
+
 .SH EXAMPLES
 The following is an script exemplifying the use
 .BR xmenu .
