Simplifying the example script.

--- a/xmenu.1
+++ b/xmenu.1
@@ -104,14 +104,16 @@ The size in pixels of the border around the menu.
 The size in pixels of the item separator.
 
 .SH EXAMPLES
-The following is an script exemplifying the use
+The following is an script exemplifying the use of
 .BR xmenu .
-The output is redirected to xargs to make a command to be run by the shell.
+The output is redirected to
+.IR sh (1),
+creating a command to be run by the shell.
 .IP
 .EX
 #!/bin/sh
 
-cat <<EOF | xmenu | xargs sh -c
+cat <<EOF | xmenu | sh
 Applications
 	Web Browser	firefox
 	Image editor	gimp
