Refactored code, changed resources and config.h

--- a/xmenu.1
+++ b/xmenu.1
@@ -94,13 +94,13 @@ The color of the separator between itens in the menu.
 .B xmenu.width
 The minimum width, in pixels, of the items in the menu.
 .TP
-.B xmenu.itemborder
-The size in pixels of the border around the label text in items in the menu.
+.B xmenu.padding
+The size in pixels of the padding around the label text in items in the menu.
 .TP
-.B xmenu.menuborder
+.B xmenu.borderWidth
 The size in pixels of the border around the menu.
 .TP
-.B xmenu.separatorsize
+.B xmenu.separatorWidth
 The size in pixels of the item separator.
 
 .SH EXAMPLES
