--- a/README
+++ b/README
@@ -22,20 +22,14 @@ The files are:
 • ./xmenu.1:    The manual file (man page) for XMenu.
 • ./xmenu.c:    The source code of XMenu.
 • ./xmenu.sh:   A sample script illustrating how to use XMenu.
-• ./patches/    See the §Patches section
 
 
-§ Patches
+§ Branches
 
-There are some patches that can be applied to XMenu in order to obtain
-novel functionalities.   The patches are located at ./patches.  There
-are the following patches:
+There are other branches in this git repository that adds novel
+functionalities to XMenu.
 
-• ./patches/icons.diff:     Add suport to image icons before menu entries.
-
-To apply a patch, use the following command:
-
-	patch -p1 < patches/patch.diff
+• icons:    Add suport to image icons before menu entries.
 
 
 § Installation
