--- a/xmenu.1
+++ b/xmenu.1
@@ -1,4 +1,4 @@
-.TH PROG 1
+.TH XMENU 1
 .SH NAME
 xmenu \- menu utility for X
 .SH SYNOPSIS
@@ -79,22 +79,22 @@ understands the following X resources.
 The font in which the labels should be drawn.
 .TP
 .B xmenu.background
-The background color of non-selected itens in the menu.
+The background color of non-selected items in the menu.
 .TP
 .B xmenu.foreground
-The color of the label text of non-selected itens in the menu.
+The color of the label text of non-selected items in the menu.
 .TP
 .B xmenu.selbackground
-The background color of selected itens in the menu.
+The background color of selected items in the menu.
 .TP
 .B xmenu.selforeground
-The color of the label text of selected itens in the menu.
+The color of the label text of selected items in the menu.
 .TP
 .B xmenu.border
 The color of the border around the menu.
 .TP
 .B xmenu.separator
-The color of the separator between itens in the menu.
+The color of the separator between items in the menu.
 .TP
 .B xmenu.width
 The minimum width, in pixels, of the items in the menu.
