Configuring height directly by setting the height.
Rather than setting the padding.

--- a/xmenu.1
+++ b/xmenu.1
@@ -99,8 +99,8 @@ The color of the separator between items in the menu.
 .B xmenu.width
 The minimum width, in pixels, of the items in the menu.
 .TP
-.B xmenu.padding
-The size in pixels of the padding around the label text in items in the menu.
+.B xmenu.height
+The size in pixels of the height of a single menu item.
 .TP
 .B xmenu.borderWidth
 The size in pixels of the border around the menu.
