Referencing the gap X resource in the manual

--- a/xmenu.1
+++ b/xmenu.1
@@ -96,6 +96,9 @@ The color of the border around the menu.
 .B xmenu.separator
 The color of the separator between items in the menu.
 .TP
+.B xmenu.gap
+The gap, in pixels, between the menus.
+.TP
 .B xmenu.width
 The minimum width, in pixels, of the items in the menu.
 .TP
