Added support for fallback fonts.
Also changed license.

--- a/xmenu.1
+++ b/xmenu.1
@@ -97,6 +97,8 @@ understands the following X resources.
 .TP
 .B xmenu.font
 The font in which the labels should be drawn.
+Multiple fonts can be added as fallback fonts;
+they must be separated by a comma.
 .TP
 .B xmenu.background
 The background color of non-selected items in the menu.
