Simplifying manual, removing unused elements

--- a/xmenu.1
+++ b/xmenu.1
@@ -18,12 +18,7 @@ The options are as follows:
 .TP
 .B -i
 Disable icons.
-.B xmenu
-allocates a space at the left side of the menu for the icons;
-if there is no icon, then this space will be blank.
-Setting the
-.B -i
-option removes this space, making the menu narrower.
+This makes xmenu loading faster when not using icons.
 .TP
 .BI -p " position"
 Set the position to spawn xmenu.
