Support for 1-9 numbers to select specific item

--- a/xmenu.1
+++ b/xmenu.1
@@ -96,7 +96,7 @@ but can also be controlled by the keyboard.
 Items can be selected using the arrow keys,
 Tab (with and without Shift),
 Home, End,
-Enter and Esc.
+Enter and Esc, and 1-9 keys.
 .TP
 .BR Home
 Select the first item in the menu.
