--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
                                CHANGELOG
 
+4.5.4 (2021-01-09)
+• Fixed ESC key.
+
 4.5.3 (2021-01-09)
 • Fixed missing lines in xmenu.c.
 
