--- a/xmenu.1
+++ b/xmenu.1
@@ -6,6 +6,8 @@ xmenu \- menu utility for X
 .RB [ \-irw ]
 .RB [ -p
 .IR position ]
+.RB [ -x|-X
+.RI [ modifier- ] button ]
 .RI [ title ]
 .SH DESCRIPTION
 .B xmenu
