--- a/xmenu.1
+++ b/xmenu.1
@@ -9,7 +9,7 @@
 .Op Fl fw
 .Op Fl N Ar name
 .Op Fl p Ar position
-.Op Fl T Ar window
+.Op Fl t Ar window
 .Op Ar title
 .Sh DESCRIPTION
 .Nm
@@ -69,7 +69,7 @@ Asks the window manager to draw a border around the menu.
 This makes
 .Nm
 start torn off.
-.It Fl T Ar window
+.It Fl t Ar window
 Make the menu windows transient for the given
 .Ar window .
 That is, notify the window manager that the menus are bound to the given
